Cluster/JupyterLab/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyterlab
spec:
  type: ClusterIP
  selector:
    app: jupyterlab
  ports:
    - name: http
      port: 8888
      targetPort: http
